<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tourism_bg"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/app_name"
        android:textColor="@color/secondary"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_login_btn"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="12dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/bg_login_btn"/>
    </LinearLayout>



</RelativeLayout>