<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bg_1"
    tools:context=".MainActivity"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/recommended_for_you"
            android:textSize="18sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@color/white"/>


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommended"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_place"/>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="18sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/see_all_categories"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="end"
            android:text="@string/see_all"
            android:padding="10dp"
            android:textColor="@color/white"/>



    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_category"/>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/all_places"
            android:textSize="18sp"
            android:padding="12dp"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/see_all_places"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="end"
            android:text="@string/see_all"
            android:padding="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_place"/>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>