<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlaceDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/res"/>
            <ImageView
                android:id="@+id/is_booked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:tint="@color/colorAccent"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:saveEnabled="true"
        android:numStars="5"
        android:layout_below="@id/image_container"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <androidx.core.widget.NestedScrollView
        android:translationZ="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/book_btn"
        android:layout_below="@id/rating">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="Place Name"/>

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/category_text_shape"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="16dp"
                android:textSize="14sp"
                android:textColor="@color/secondary"
                android:textAlignment="center"
                android:text="Restaurant"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hint_details"
                android:textAlignment="textStart"
                />
            <TextView
                android:id="@+id/details"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:maxLines="50"
                android:isScrollContainer="true"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:text="place details"
                android:alpha="0.8"
                />

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hint_reservation"
                    android:textAlignment="textStart"
                    />
                <TextView
                    android:id="@+id/reservation_date"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:maxLines="50"
                    android:isScrollContainer="true"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:text="25-2-2022"
                    android:alpha="0.8"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rate_this_place"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_star_half"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"

                />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/book_btn"
        android:translationZ="90dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/book"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/bg"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:drawableEnd="@drawable/ic_book"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

</RelativeLayout>